--- a/doc/_static/style.css
+++ b/doc/_static/style.css
@@ -52,7 +52,8 @@ p {
     max-width: 1000px;
 }
 
-/* Version compatibility override */
+/* Compatibility with sphinx_rtd_theme v3.x.x */
+/* https://github.com/TexasInstruments/processor-sdk-doc/commit/4fa6276ddcf7f9db919af2e5b3aec7e70a1afa16 */
 .wy-side-nav-search>div.version {
     margin-top: -.4045em;
     margin-bottom: .809em;
